# hybridclr_trial

./: .editorconfig  .gitignore  Assembly-CSharp-Editor.csproj  BetterStreamingAssets.csproj  HotFix.csproj  Main.csproj  README.md  copydll.bat  gen_env.sh  huatuo.sln  huatuo_trial.sln  link.xml
Assets/: AOTAssemblyManifest.asset  ConsoleToScreen.cs  HybridCLRGlobalSettings.asset  HybridCLRLinkSettings.asset  HybridCLRMethodBridgeSettings.asset  LoadDll.cs  link.xml
Assets/Editor/: BuildPlayer.cs  BuildTools.cs  HuaTuoEditorHelper.cs
Assets/Editor/HuaTuo/: BuildProcessor_2020_1_OR_NEWER.cs  EditorHelper.cs  HuaTuoEditorHelper.cs  HuaTuo_BuildProcessor_2019.cs  HuaTuo_BuildProcessor_2020_1_OR_NEWER.cs  HuaTuo_BuildProcessor_2021_3_OR_NEWER.cs  HuatuoEditorHelper.cs  Huatuo_BuildProcessor_2019.cs  Huatuo_BuildProcessor_2020_1_OR_NEWER.cs
Assets/Editor/HuaTuo/Generators/: ConstStrings.cs  FileRegionReplace.cs  GeneratorEditorCommand.cs  IPlatformAdaptor.cs  MethodBridgeGenerator.cs  MethodBridgeSig.cs  ParamInfo.cs  ParamOrReturnType.cs  PlatformAdaptorBase.cs  PlatformAdaptor_Arm32.cs  PlatformAdaptor_Arm64.cs  PlatformAdaptor_Armv7.cs  PlatformAdaptor_X64.cs  TemplateUtil.cs  TypeInfo.cs  ValueTypeSizeAligmentCalculator.cs
Assets/Editor/HuaTuo/UnityBinFileReader/: UnityBinFile.cs  UnityBinFileDefines.cs  UnityBinUtils.cs
Assets/Editor/HybridCLR/: AOTAssemblyManifest.cs  AssetBundleBuildCommand.cs  AssetBundleBuildHelper.cs  BuildAssetsCommand.cs  BuildConfig.cs  BuildConfig_Custom.cs  BuildPlayerCommand.cs  BuildPlayerHelper.cs  BuildProcessor_2019.cs  BuildProcessor_2020_1_OR_NEWER.cs  CompileDllCommand.cs  CompileDllHelper.cs  EditorHelper.cs  Global.Editor.asmdef  InstallController.cs  InstallWindow.cs  InstallerController.cs  InstallerWindow.cs  MethodBridgeHelper.cs
Assets/Editor/HybridCLR/BuildProcessors/: BPCheckSettings.cs  BPCopyStrippedAOTAssemblies.cs  BPPatchScriptAssembliesJson.cs  GenerateXcodeWorkspace.cs  HookEditorStripAOTAction.cs
Assets/Editor/HybridCLR/Generators/: ConstStrings.cs  FileRegionReplace.cs  GeneratorConfig.cs  IPlatformAdaptor.cs  MethodBridgeGenerator.cs  MethodBridgeSig.cs  ParamInfo.cs  ParamOrReturnType.cs  PlatformAdaptorBase.cs  PlatformAdaptor_Arm32.cs  PlatformAdaptor_Arm64.cs  PlatformAdaptor_Armv7.cs  PlatformAdaptor_General32.cs  PlatformAdaptor_General64.cs  PlatformAdaptor_X64.cs  PlatformAdaptor_X86.cs  TemplateUtil.cs  TypeInfo.cs  ValueTypeSizeAligmentCalculator.cs
Assets/Editor/HybridCLR/Generators/MethodBridge/: IPlatformAdaptor.cs  MethodBridgeGenerator.cs  MethodBridgeSig.cs  ParamInfo.cs  ParamOrReturnType.cs  PlatformABI.cs  PlatformAdaptorBase.cs  PlatformAdaptor_Arm64.cs  PlatformAdaptor_Universal32.cs  PlatformAdaptor_Universal64.cs  SignatureProviderAttribute.cs  TypeInfo.cs  ValueTypeSizeAligmentCalculator.cs
Assets/Editor/HybridCLR/Generators/Templates/: MethodBridge_Arm64.cpp  MethodBridge_General32.cpp  MethodBridge_General64.cpp  MethodBridge_arm64.cpp  MethodBridge_armv7.cpp  MethodBridge_x86.cpp
Assets/Editor/HybridCLR/Installer/: InstallerController.cs
Assets/Editor/HybridCLR/Templates/: MethodBridge_x64.cpp
Assets/Editor/HybridCLR/UnityBinFileReader/: GlobalgamedatasPatcher.cs  UnityBinFile.cs
Assets/Editor/HybridCLR/UnityHook/: README.md
Assets/HotFix/: App.cs  CreateByCode.cs  CreateByHotFix2.cs  HotFix.asmdef  HotifxMain.cs  PrintHello.cs
Assets/HotFix2/: App.cs  HotFix2.asmdef
Assets/HotUpdate/: CreateByCode.cs  Entry.cs  Hello.cs  HotUpdate.asmdef  HotUpdateMain.cs  InstantiateByAddComponent.cs  InstantiateByAsset.cs  ReflectionInvoke.cs  Rotate.cs
Assets/HybridCLRGenerate/: AOTGenericReferences.cs  link.xml
Assets/LinkGenerator/: link.xml
Assets/Main/: AOTGenericReferences.cs  ConsoleToSceen.cs  ConsoleToScreen.cs  Demos.cs  LoadDll.cs  LoadDllFromAssetbundle.cs  Main.asmdef  RefTypes.cs  StateMachine1.cs
Assets/Main/HuatuoLib/: HuatuoApi.cs  RefTypes.cs  TaskHelper.cs
Assets/Main/HybridCLR/: HotUpdateAssemblyManifest.cs  RefTypes.cs  RuntimeApi.cs
Assets/Main/HybridCLRLib/: HybridCLRApi.cs
Assets/Main/Resources/: HotUpdateAssemblyManifest.asset
Assets/Main/Test/: PTest.cs  TestItem.cs  UserClass.cs
Assets/Plugins/BetterStreamingAssets/: BSA_TestScene.unity  BetterStreamingAssets.asmdef  README.txt
Assets/Prefabs/: Cube.prefab  HotUpdatePrefab.prefab
Assets/Scenes/: HotUpdateScene.unity  SampleScene.unity  main.unity
Assets/StreamingAssets/: HotUpdate.dhao.bytes  HotUpdate.dll.bytes  System.Core.dll.bytes  System.dll.bytes  Unload.dll.bytes  aotdlls  build_info  common  hotupdatedlls  huatuo  manifest.txt  mscorlib.dll.bytes  prefabs  scene
Assets/StreamingAssets/AOTAssemblies/: System.Core  mscorlib
Assets/Unity-Logs-Viewer/Reporter/: Reporter.cs
Assets/Unload/: Unload.asmdef  UnloadEntry.cs
Debug/huatuo_Data/: ScriptingAssemblies.json  app.info  boot.config  globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets  sharedassets0.assets.resS
Debug/huatuo_Data/Resources/: unity_builtin_extra
HuatuoData/: init_huatuo_repos.bat  init_huatuo_repos.sh  init_local_il2cpp_data.bat  init_local_il2cpp_data.sh  set_version_2020.3.33.bat  set_version_2021.3.1.bat  update_huatuo_repos.bat  update_huatuo_repos.sh
HybridCLRData/: init_local_il2cpp_data.bat  init_local_il2cpp_data.sh
HybridCLRData/iOSBuild/: CMakeLists.txt  build_libil2cpp.sh
HybridCLRData/iOSBuild/CMake/: ucm.cmake
HybridCLRData/iOSBuild/objective/: CMakeLists.txt
HybridCLRData/iOSBuild/original/: CMakeLists.txt
ProjectSettings/: EditorBuildSettings.asset  HybridCLRSettings.asset  PackageManagerSettings.asset  ProjectSettings.asset  ProjectVersion.txt  UnityConnectSettings.asset
Release/huatuo_Data/: globalgamemanagers  globalgamemanagers.assets  level0  sharedassets0.assets
UserSettings/: EditorUserSettings.asset
